//READ THIS IS YOU'RE STRUGGLING TO BUILD
// Make sure your IDE is set up with Java SDK 15. I'm using corretto-15
// Make sure gradle is using the same SDK. This is set in IDEA File|Settings|Build Tools| Gradle


plugins {
    id 'java'
    id 'maven-publish'
    id 'distribution'
}

//DEPENDENCY MANAGEMENT--
repositories {
    jcenter()
    maven {
        url "https://www.hec.usace.army.mil/nexus/repository/maven-public/"
    }
}

dependencies {
    implementation "org.junit.jupiter:junit-jupiter:5.4.2"
    implementation 'org.apache.commons:commons-lang3:3.11'
    implementation 'mil.army.usace.hec.wat:wat-hec-maps:dev-3.0.0.1856-20210504.234927-1@jar'
    implementation 'mil.army.usace.hec.wat:wat-hec:dev-3.0.0.1855-20210504.180613-1@jar'
    implementation 'mil.army.usace.hec.wat:wat-hecnf:dev-3.0.0.1855-20210504.180601-1@jar'
    implementation 'mil.army.usace.hec.wat:wat-hecnf-pluginapi:dev-3.0.0.1855-20210504.180607-1@jar'
    implementation 'org.jdom:jdom:1.1'
    implementation 'mil.army.usace.hec.wat:wat-rma:dev-3.0.0.1855-20210504.180620-1@jar'
    implementation 'mil.army.usace.hec.wat:wat-rmadev:dev-3.0.0.1855-20210504.180626-1@jar'
    implementation 'mil.army.usace.hec.wat:wat:dev-3.0.0.1855-20210504.180549-1@jar'
    implementation 'mil.army.usace.hec.wat:wat-model:dev-3.0.0.1855-20210504.180555-1@jar'
    implementation 'mil.army.usace.hec:javaHeclib:7-HZ-win-x64@zip'
    implementation 'org.apache.commons:commons-math3:3.5'
}

//TESTING--
test{
    useJUnitPlatform()
    testLogging{
        test {
            testLogging {
                events "PASSED","FAILED", "SKIPPED"
            }
        }
    }
}
tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs "--enable-preview"
}

//PUBLISHING--
group = "mil.army.usace.hec"
version "1.0"

distributions {
    main {
        distributionBaseName = 'ConfidenceBuilderPlugin'
        contents {
            from 'src/WATPluginMarketplaceConfig'
            from 'build/libs'
        }
    }
}

jar {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    manifest {
        attributes "WatPluginMainClass": "ConfidenceBuilderPlugin"
    }
}

publishing {
    publications {
        ConfidenceBuilderArtifact(MavenPublication) {
            from components.java
            artifact distZip

        }
    }
    repositories {
        maven {
            def releasesRepoUrl = "https://www.hec.usace.army.mil/nexus/repository/WAT_Plugins/"
            def snapshotsRepoUrl = "https://www.hec.usace.army.mil/nexus/repository/WAT_Plugins/"
            url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
        }
    }
}
publish.dependsOn jar
